<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="Name">Udacity</string>
    <string name="Address">2465 Latham St\nMountain View, CA 94043</string>
    <string name="PhoneNumber">(650) 555&#8209;5555</string>
    <string name="PhoneType">Office</string>
    <string name="WebsiteText">udacity.com</string>
    <string name="AboutTitle">About Udacity</string>
    <string name="ContentDescriptionHero">Those are a few nice shirts from Udacity</string>
    <string name="ContentDescriptionLinebreak">This is a line break</string>
    <string name="ContentDescriptionPhoneIcon">Phone number just right next to this</string>
    <string name="ContentDescriptionBusinessIcon">Office address just right next to this</string>
    <string name="ContentDescriptionLinkIcon">Website just right next to this</string>
</resources>
